# PyControls

./: .gitignore  Complexity Analysis.md  Equations and Formulae.md  README.md  config.py  exit.py  main.py  pyproject.toml  requirements.txt  system_registry.py  test_runner.py
HIL_Heater_Firmware/src/: main.cpp
HIL_PWM_Firmware/: platformio.ini
HIL_PWM_Firmware/src/: main.cpp
Heater Project Report/: Project Report.md
PWM Project Report/: Project Report.md
core/: __init__.py  analysis.py  control_utils.py  ekf.py  ekf_discrete.py  estimator.py  exceptions.py  math_utils.py  mpc.py  solver.py  state_space.py  transfer_function.py  ukf.py
docs/: Equations and Formulae.md  MIT License.txt  README.md
helpers/: config.py  plot.py  simulation_runner.py  system_registry.py
modules/: __init__.py  interactive_lab.py  physics_engine.py
systems/: __init__.py  battery.py  dc_motor.py  pendulum.py  thermistor.py
tests/: test_analysis.py  test_control.py  test_core_models.py  test_estimators.py  test_jit_vec  test_jit_vec.py  test_kf_ekf.py  test_math.py  test_models.py  test_modules.py  test_mpc.py  test_solver.py  test_solvers.py  test_systems.py  test_ukf_mpc.py
