[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycontrols"
version = "0.1.0"
description = "A First-Principles Control Systems Simulation Library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Shadow", email = "updow512@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research/Software",
]
dependencies = [
    "numpy",
    "matplotlib",
    "numba>=0.59.0",
] 

[project.urls]
"Homepage" = "https://github.com/shadow30812/pycontrols"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "systems*"]